# feedback-bottleneck

./: .gitignore  LICENSE  README.md  pyproject.toml
feedback_bottleneck/config/: args.py
feedback_bottleneck/dataset/: __init__.py  dataset.py  loading.py  tokenizer.py  utils.py
feedback_bottleneck/envs/: __init__.py  dataset_env.py  dataset_utils.py  env_wrapper.py  spaces.py
feedback_bottleneck/envs/arc_agi/: __init__.py  instruction_prompt.py  make_env.py
feedback_bottleneck/envs/bbeh/: __init__.py  evaluate.py  instruction_prompt.py  make_env.py
feedback_bottleneck/envs/countdown/: __init__.py  countdown.py  instruction_prompt.py  make_env.py
feedback_bottleneck/envs/crafter/: actions.py  instruction_prompt.py  language_wrapper.py  make_env.py  pygame_wrapper.py
feedback_bottleneck/envs/enterprise_ops/: __init__.py  assets.py  instruction_prompt.py  make_env.py  tasks.py  verification.py
feedback_bottleneck/envs/nle/: actions.py  instruction_prompt.py  language_wrapper.py  make_env.py  tips.py
feedback_bottleneck/envs/omni_code/: __init__.py  instruction_prompt.py  make_env.py  metrics.py  sandbox.py  tasks.py
feedback_bottleneck/llm/: evaluator.py  guidance.py  vllm_cfg_patch.py
feedback_bottleneck/utils/: math_eval_metrics.py  metrics_tracker.py  model_inputs.py  typing.py  utils.py  wandb_utils.py
helios/: jan_reruns_array_gh200.sbatch  vllm0210_cu129_flash_venv.md  vllm0210_cu129_flash_venv_gh200.sbatch  vllm0220_cu129_flash_venv_gh200.sbatch
scripts/: _common.sh  collect_episodes.py  run_arc_agi.sh  run_bbeh.sh  run_code.sh  run_math.sh
(+52 files in other folders)
