[project]
name = "feedback-bottleneck"
version = "0.1.0"
description = "Student-teacher framework for studying when natural-language feedback helps LLMs improve on multi-turn tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets<4.0.0",
    "deepspeed>=0.19.1",
    "gymnasium>=1.3.0",
    "pylatexenc>=2.10",
    "ray[default]>=2.55.1",
    "transformers==5.5.4",
    "tyro>=1.0.13",
    "vllm>=0.22.1",
    "wandb>=0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["feedback_bottleneck*"]
